Designing the Home Component

--- a/src/app/include/home/home.component.html
+++ b/src/app/include/home/home.component.html
@@ -1,3 +1,48 @@
-<p>
-  home works!
-</p>
+<div class="col-md-12 m-2">
+  <span class="pr-2">
+      <i class="fa fa-tachometer fa-2g"></i>
+  </span>
+  <h5>Library- Home</h5>
+</div>
+<div class="col-md-12">
+    <hr class="mt-2 mb-2"/>
+</div>
+<div class="col-md-12">
+    <h4 class="text-info">This Application is a dummy Library Management System that models the operations of a library. 
+  It consists of the following menus</h4>
+</div>
+<div class="col-md-2">
+  <h6 class="text-info">Book Shelves : </h6>
+</div>
+<div class="col-md-10">
+    
+</div>
+<div class="col-md-2">
+    <h6 class="text-info">Books : </h6>
+</div>
+<div class="col-md-10">
+      
+</div>
+<div class="col-md-2">
+    <h6 class="text-info">Members : </h6>
+</div>
+<div class="col-md-10">
+      
+</div>
+<div class="col-md-12">
+    <hr class="mt-2 mb-2"/>
+</div>
+<div class="col-md-12">
+    <h4 class="text-info">The following was used :</h4>  
+</div>
+<div class="col-md-12">
+  <table class="table table-bordered">
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Bootstrap 4</td>
+        <td>Responsible for Front end Design and Structure</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
