List-Book-Shelves Component

--- a/src/app/include/home/home.component.html
+++ b/src/app/include/home/home.component.html
@@ -40,7 +40,7 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Bootstrap 4</td>
+        <td width="17%">Bootstrap 4</td>
         <td>Responsible for Front end Design and Structure</td>
       </tr>
     </tbody>
